--- a/src/app/pages/admin/add-startup/add-startup.component.html
+++ b/src/app/pages/admin/add-startup/add-startup.component.html
@@ -23,6 +23,11 @@
             </mat-form-field>
         </div>
 
+        <mat-form-field >
+            <mat-label>About</mat-label>
+            <input placeholder="About" matInput type="text" formControlName="about">
+        </mat-form-field>
+
         <mat-form-field>
             <mat-label>year Of Establishment</mat-label>
             <input placeholder=" year of Establishment" matInput type="number" formControlName="yearOfEstablishment">
