--- a/src/app/lib/layout/user-layout/layout.component.css
+++ b/src/app/lib/layout/user-layout/layout.component.css
@@ -1,17 +1,17 @@
 * {
     margin: 0%;
+    padding: 0;
     list-style-type: none;
 }
 
 nav {
-
-    /* background-image: linear-gradient(#fffdce, white); */
     background-image: linear-gradient(#1d6cc6 , #c4dbf5, #d7e5f5, white);
     display: flex;
     flex-direction: row;
     justify-items: flex-end;
     justify-content: space-between;
     height: 10vh;
+    width: 100vw;
 }
 
 div{
@@ -27,3 +27,58 @@ nav > * , button {
     margin: 1%;
 }
 
+@media screen and (max-width: 960px) {
+    nav{
+        width: 100vw;
+    }}
+ @media screen and (max-width: 860px) {
+    nav{
+        width: 100vw;
+    }
+    div{
+        min-width: 40%;
+    }
+   
+   }
+
+@media screen and (max-width: 600px) {
+    img{
+        width: 15%; 
+    }   
+   }
+
+   @media screen and (max-width: 660px) {
+    div{
+        min-width: 50%;
+    }
+    nav{
+        justify-content:center;
+        justify-content: space-between;
+    }
+   }
+
+   
+   @media screen and (max-width: 520px) {
+    div{
+        min-width: 60%;
+    }
+    nav{
+        justify-content:center;
+        justify-content: space-between;
+    }
+   }
+
+   @media screen and (max-width: 429px) {
+    div{
+        width: 100%;
+    }
+   
+   }
+
+
+   @media screen and (max-width: 423px) {
+    nav{
+        min-width: 100%;
+    }
+   
+   }
