--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -1,4 +1,9 @@
-.container{
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.container {
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -12,7 +17,7 @@
     /* background-position: center center; */
 }
 
-.paragraph{
+.paragraph {
     color: black;
     margin-top: 7%;
     font-size: large;
@@ -22,14 +27,56 @@
 }
 
 
-
-
-button{
-    right: 10%;
-    margin-top: 5%;
+button {
+    margin-top: 20%;
 }
 
-mat-card:nth-child(even){
-   width: 35%
 
+
+
+
+
+@media screen and (max-width: 1310px) {
+    .container {
+        align-items: flex-end;
+        width: 90%;
+        height: 100vh;
+    }
+
+    .paragraph {
+padding-left: 50%;    }
+}
+
+@media screen and (max-width: 960px) {
+    .container {
+        align-items: flex-end;
+        padding-right: 50%;
+        width: 95%;
+        height: 100vh;
+    }
+    .paragraph {
+padding-left: 50%;    }
+}
+
+@media screen and (max-width: 700px) {
+    .container {
+        align-items: flex-start;
+        width: 80%; 
+        height: 100vh;
+        background-repeat: repeat;
+
+    }
+    .paragraph {
+width: 80%;
+padding-left: 25%; }
+
+    p, u {
+text-align: center;
+        padding: 10%;
+        padding-top: 0;
+    }
+    button{
+        padding-top: 0;
+        margin-top: 0;
+    }
 }
