--- a/src/app/pages/all-startups/all-startups.component.css
+++ b/src/app/pages/all-startups/all-startups.component.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .mainContainer{
     width: 80%;
     display: grid;
@@ -33,3 +38,24 @@ img{
 /* h2{
     text-align: center;
 } */
+
+@media screen and (max-width: 800px) {
+   .mainContainer{
+    grid-template-columns: repeat(3,1fr);
+
+   }
+  }
+
+  @media screen and (max-width: 500px) {
+    .mainContainer{
+     grid-template-columns: repeat(2,1fr);
+ 
+    }
+   }
+
+   @media screen and (max-width: 370px) {
+    .mainContainer{
+     grid-template-columns: 1fr;
+ 
+    }
+   }
