--- a/src/app/pages/contact-us/contact-us.component.css
+++ b/src/app/pages/contact-us/contact-us.component.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
 .mainContainer {
     display: grid;
@@ -30,3 +34,18 @@
 .container1>button{
     left: 14%;
 }
+
+@media screen and (max-width: 960px) {
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    .mainContainer {
+        display: flex;
+        flex-direction: column-reverse;
+        margin: 0 auto;
+    }
+    .container2>form>*, .container1 {
+        width: 90%;
+    }
+    }
