--- a/src/app/pages/startups-details/startups-details.component.html
+++ b/src/app/pages/startups-details/startups-details.component.html
@@ -3,7 +3,7 @@
 <div class="mainContainer">
 
     
-        <mat-card class="container2">
+        <mat-card class="container1">
             <mat-card-content>
                 <img mat-card-image src="{{startup?.logo}}" alt="logo" />
             </mat-card-content>
@@ -18,29 +18,29 @@
 
 
 
-        <mat-card class="container1">
+        <mat-card class="container2">
             <mat-card-content>
-                <pre>  <h2> <b>COMPANY NAME:     {{startup?.companyName}}</b> </h2></pre>
+                <pre>  <h2>Company name:     {{startup?.companyName}} </h2></pre>
             </mat-card-content>
 
             <mat-card-content>
-                <pre><h2>SECTOR:    {{startup?.sector}} </h2></pre>
+                <pre><h2>Sector:    {{startup?.sector}} </h2></pre>
             </mat-card-content>
 
             <mat-card-content>
-                <pre><h2>YEAR OF ESTABLESHMENT:    {{startup?.yearOfEstablishment}} </h2></pre>
+                <pre><h2>Year of establishment:    {{startup?.yearOfEstablishment}} </h2></pre>
             </mat-card-content>
 
             <mat-card-content>
-                <pre><h2>PHONE NUMBER:       <a href="tel:{{startup?.phone}}">{{startup?.phone}}</a></h2></pre>
+                <pre><h2>Phone number:       <a href="tel:{{startup?.phone}}">{{startup?.phone}}</a></h2></pre>
             </mat-card-content>
 
             <mat-card-content>
-                <pre> <h2>EMAIL ADDRESS     <a href="mailto:{{startup?.email}}">{{startup?.email}}</a></h2></pre>
+                <pre> <h2>Email address:     <a href="mailto:{{startup?.email}}">{{startup?.email}}</a></h2></pre>
             </mat-card-content>
 
             <mat-card-content>
-                <pre><h2>COMPANY WEBSITE:      <a href="{{startup?.website}}">{{startup?.website}}</a></h2></pre>
+                <pre><h2>Company website:      <a href="{{startup?.website}}">{{startup?.website}}</a></h2></pre>
             </mat-card-content>
 
         </mat-card>
