--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -48,9 +48,12 @@
     </ng-container>
 
 
+
     <ng-container matColumnDef="about">
-      <th mat-header-cell *matHeaderCellDef> About </th>
-      <td mat-cell *matCellDef="let element" class="about"> {{element.about}} </td>
+      <th mat-header-cell *matHeaderCellDef> Info </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="companyInfo(element.id)"><mat-icon>info</mat-icon></button>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="edit">
