--- a/src/app/pages/startups-details/startups-details.component.css
+++ b/src/app/pages/startups-details/startups-details.component.css
@@ -1,43 +1,63 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.mainContainer{
-    /* display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center; */
+.mainContainer {
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin: 5%;
     gap: 10%;
 }
 
-
-
-img{
+img {
     max-width: 25vw;
 }
 
-.container2{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
+.container1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
 }
 
-.about{
+.about {
     text-align: justify;
 }
 
-.container1{
+.container2 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 2%;
 }
 
-button{
-left: 50%;
-padding: 0 2%;
+button {
+    left: 50%;
+    padding: 0 2%;
+}
+
+
+@media screen and (max-width: 1050px) {
+    .mainContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        margin: 0;}
+        
+    button {
+        margin-top: 1%;
+    }
+    .container2 {
+        padding-top: 0;
+        margin-top: 2%;
+    }
+    .container1,
+    .container2 {
+        width: 70vw;
+        font-size: small;
+    }
 }
