--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -40,10 +40,10 @@
     </div>
     
     <div class="container1">
-        <pre><h2><b>E-mail:  </b><a href="mailto:ayat_slaity@yahoo.com">E-mail/ayat_Slaity</a></h2></pre>
+        <pre><h2><b><mat-icon>call</mat-icon>   </b><a href="tel:+962797329470">+962797329470</a></h2></pre>
+        <pre><h2><b><mat-icon>email</mat-icon>   </b><a href="mailto:ayat_slaity@yahoo.com">E-mail/ayat_Slaity</a></h2></pre>
         <pre><h2><b>GitHub:  </b><a href="https://github.com/ayat-saliti">GitHub/ayat-saliti</a></h2></pre>
         <pre><h2><b>LinkedIn:  </b><a href="https://linkedin.com/in/ayat-slaity">LinkedIn/ayat-Slaity</a></h2></pre>
-        <pre><h2><b>Phone number:   </b><a href="tel:+962797329470">+962797329470</a></h2></pre>
         <br><br>
         <button mat-raised-button color="primary" [routerLink]="['/allStartups']">Back to home page</button>
     </div>
