--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -47,26 +47,12 @@
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
-
-
-    <ng-container matColumnDef="about">
-      <th mat-header-cell *matHeaderCellDef> Info </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button (click)="companyInfo(element.id)"><mat-icon>info</mat-icon></button>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef> EDIT </th>
-      <td mat-cell *matCellDef="let element">
-        <mat-icon [routerLink]="['editStartup',element.id]">edit</mat-icon>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef> DELETE </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-icon-button (click)="deleteStartup(element.id)"><mat-icon>delete</mat-icon></button>
+    <ng-container matColumnDef="more">
+      <th mat-header-cell *matHeaderCellDef> More </th>
+      <td mat-cell *matCellDef="let element" class="subContainer">
+        <span> <mat-icon (click)="companyInfo(element.id)">info</mat-icon></span>
+        <span> <mat-icon [routerLink]="['editStartup',element.id]">edit</mat-icon></span>
+        <span>  <mat-icon (click)="deleteStartup(element.id)">delete</mat-icon></span>
       </td>
     </ng-container>
 
